# pong

./: pong.cabal
etc/: consul-client.cfg  consul-client.conf  consul-server.cfg  consul-server.conf  dnsmasq-template.sh  haproxy-svc-template.sh  resolvconf-dnsmasq-template.sh  resolvconf-template.sh  service-template.sh
src/: Ancillary.hs  Server.hs  ancillary.c  ancillary.h  pong.hs
