name:          pong
license:       PublicDomain
version:       0.0.1
build-type:    Simple

executable pong
  main-is:         pong.hs
  c-sources:       src/ancillary.c
  build-tools:     hsc2hs
  ghc-options:     -threaded -rtsopts -W
  include-dirs:    src
  build-depends:    base
                  , unix
                  , time        >= 1.5.0.1
                  , network
                  , process
                  , directory
  other-modules:    Ancillary
  hs-source-dirs:   src
